2013-10-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (gprintf) axis.h: (REVERTED)

2013-10-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm term/cairo.trm term/canvas.trm term/emf.trm
	term/gd.trm term/pdf.trm term/post.trm term/svg.trm term/win.trm
	term/wxt.trm term/x11.trm term/qt.trm src/qtterminal/qt_term.cpp:

	Default to enhanced text mode in terminals that support it.
	This mode can still be disabled by "set term FOO noenhenced" or
	"set termoption noenhanced".

2013-10-06  Craig DeForest  <deforest@boulder.swri.edu>

	* src/axis.h src/util.c (gprintf) docs/gnuplot.doc:
	New format specifier %h expands to the same as %g except that the
	exponential term, if any, is written using enhanced text or LaTeX markup
	to generate "x10^{foo}" rather than "E+foo". The default format for axis
	tics is now "% h" ("$%h$" for LaTeX terminals).

2013-10-02  Ethan A Merritt  <merritt@u.washington.edu>

        * src/command.c (expand_1level_macros):  Never try to expand an 
	undefined variable as a macro.

2013-10-02  Ethan A Merritt  <merritt@u.washington.edu>

        * src/graphics.c (plot_steps plot_fsteps plot_histeps):
	Replace 350 lines of ad hoc clipping with calls to draw_clip_line.

	* src/gadgets.c src/gadgets.h:  There are no longer any external callers
	of clip_line(), so make it local to gadgets.

2013-10-01  Christoph Bersch <usenet@bersch.net>

	* src/plot2d.c (store_label):  Plots with labels should accept variable
	color both for the label text and for the associated point symbol.
        Bug #1281

2013-09-30  Ethan A Merritt  <merritt@u.washington.edu>

        * src/graphics.c (plot_bars):  Draw error bars using draw_clip_line
	rather than performing ad hoc clipping on the spot.
	Bug #1289

2013-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/save.c src/set.c src/stdfn.h src/unset.c:
	Consolidate axis range flags from two fields into a single field.
