@@ -1,5 +1,12 @@
 2013-10-09  Ethan A Merritt  <merritt@u.washington.edu>
 
+	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput):  One code path followed
+	in the case of piped input to a script with mousing enabled failed to 
+	test for the new TERM_ONLY_CHECK_MOUSING flag.
+	Bug #1293
+
+2013-10-09  Ethan A Merritt  <merritt@u.washington.edu>
+
 	* src/util.c (gprintf) axis.h: (REVERTED)
 
 2013-10-06  Ethan A Merritt  <merritt@u.washington.edu>
